package usage;

public enum DeliveryStatus {
    AWAITING, DELIVERED, CONFIRMED
}
