package usage;

public enum ItemGenre {
    FICTION, HISTORY, PHILOSOPHY, PSYCHOLOGY, EDUCATION, SCIENCE
}
