package usage;

public interface Orderable {
    boolean isOrderable();
    String getFullDescription();
}
