package usage;

public interface Registrable {
    void addAccountToDataBase();
    String getDisplayUsername();
}
